apps/node-demo/prod/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-preview-service
  labels:
    app: node-api-preview-service
spec:
  selector:
    app: node-api  # Must match the Rollout's selector.matchLabels
  ports:
  - name: "http"
    nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
