apps/node-demo/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
  labels:
    app: node-api-service
spec:
  selector:
    app: node-api
  ports:
  - name: "http"
    nodePort: 30000
    port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
