apps/node-demo/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-api-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
  - host: prod.node-api.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-api-service
            port:
              number: 80
